# AcfPublic

./: BuildAll.bat  Desktop.ini  ModuleDependencies.xml
Acf/: License.txt  RegisterEnvVariables.js  RegisterEnvVariablesLocal.js
Acf/Config/: AcfTestConfig.awc  BaseOnly.awc  BaseOnly.xpc  Core.xpc  Full.xpc
Acf/Config/CMake/: AcfEnv.cmake  AcfQt.cmake  AcfStd.cmake  AcfStdGui.cmake  ApplicationConfig.cmake  ComponentConfig.cmake  CustomBuild.cmake  CustomBuildFunction.cmake  GeneralConfig.cmake  Macro.cmake  MsvcEnableDebugInfo.cmake  PluginConfig.cmake  ProjectRoot.cmake  QtBaseConfig.cmake  QtGuiBaseConfig.cmake  SharedLibraryConfig.cmake  StaticConfig.cmake  WindeployQt.cmake
Acf/Config/QMake/: AcfLibs.pri  AcfQt.pri  AcfStd.pri  AcfVersion.pri  ApplicationConfig.pri  ComponentConfig.pri  CopyVCProjToSubdir.js  CustomBuild.pri  GeneralConfig.pri  IncludeConfig.pri  IncludeQtConfig.pri  IncludeQtGuiConfig.pri  MsvcEnableDebugInfo.pri  QtBaseConfig.pri  QtGuiBaseConfig.pri  SharedLibraryConfig.pri  Solution.pri  StaticConfig.pri  TestConfig.pri  TestRunnerConfig.pri
Acf/Config/Qbs/: ApplicationProduct.qbs
Acf/Config/Test/: TestConfig.pri  TestRunnerConfig.pri
Acf/Config/Tortoise/: config.txt
Acf/Config/VC10/: Acf.rules  Component.vsprops  Debug.props  Debug.vsprops  General.props  Release.props  Static.vsprops
Acf/Config/VC12/: Acf.props  Acf.rules  Acf.targets  Application.props  Component.props  Debug.props  General.props  QtUIForm.props  QtUIForm.rules  QtUIForm.targets  Release.props  Static.props  Win32.props  Win64.props
Acf/Config/VC8/: Acf.rules  QtUIForm.rules
Acf/Config/VC9/: Acf.rules  Application.vsprops  Component.vsprops  ConvertFromVC8.js  Debug.vsprops  General.vsprops  Plattform64.vsprops  QtUIForm.rules  Release.vsprops  Static.vsprops  Win32.vsprops  Win64.vsprops
Acf/Config/Xcd/: ConvertToXcd.js
Acf/Docs/: InstallationInfo.txt  TechnicalDoc.tag
Acf/Docs/Design/: DocFooter.html
Acf/Docs/TechnicalDoc/: Acf.qch  Acf.tags  Package.tag  _a_c_f_8h.html  _a_c_f_8h_source.html  _acf_version_8h.html  _acf_version_8h_source.html  _c_about_widget_gui_comp_8h.html  _c_about_widget_gui_comp_8h_source.html  _c_affine2d_8h.html  _c_affine2d_8h_source.html  _c_affine_transformation2d_8h.html  _c_affine_transformation2d_8h_source.html  _c_affine_transformation2d_comp_8h.html  _c_affine_transformation2d_comp_8h_source.html  _c_affine_transformation2d_shape_8h.html  _c_affine_transformation2d_shape_8h_source.html  _c_affine_transformation_params_gui_8h.html  _c_affine_transformation_params_gui_8h_source.html  _c_affine_transformation_params_gui_comp_8h.html  _c_affine_transformation_params_gui_comp_8h_source.html  _c_affinite_calibration_8h.html  _c_affinite_calibration_8h_source.html  _c_affinite_calibration_shape_8h.html  _c_affinite_calibration_shape_8h_source.html  _c_akima_interpolator_8h.html  _c_akima_interpolator_8h_source.html  _c_annulus_8h.html  _c_annulus_8h_source.html  _c_annulus_comp_8h.html  _c_annulus_comp_8h_source.html  _c_annulus_params_gui_comp_8h.html  _c_annulus_params_gui_comp_8h_source.html  _c_annulus_segment_8h.html  _c_annulus_segment_8h_source.html  _c_annulus_segment_comp_8h.html  _c_annulus_segment_comp_8h_source.html  _c_annulus_segment_params_gui_comp_8h.html  _c_annulus_segment_params_gui_comp_8h_source.html  _c_annulus_segment_shape_8h.html  (+4281 more)
Acf/Docs/html/: index.html
Acf/Impl/AcfExe/: Main.cpp  main.cpp
Acf/Impl/AcfExe/CMake/: CMakeLists.txt
Acf/Impl/AcfLoc/: AcfLoc.qrc  Acf_de_DE.ts  Acf_en_US.ts  Acf_pl_PL.ts  Acf_ru_RU.ts
Acf/Impl/AcfStarterExe/: CAcfStarter.cpp  CAcfStarter.h  CAcfStarter.ui  main.cpp
Acf/Impl/AcfStd/: Empty.cpp
Acf/Impl/ArxcExe/: Main.cpp
Acf/Impl/ArxcExe/CMake/: CMakeLists.txt
Acf/Impl/BasePck/: BasePck.cpp  BasePck.h
Acf/Impl/BitmapPck/: BitmapPck.cpp  BitmapPck.h
Acf/Impl/CarxcExe/: main.cpp
Acf/Impl/CmpstrPck/: CmpstrPck.cpp  CmpstrPck.h
Acf/Impl/CompositorExe/: Compositor.alx  Compositor.arx  main.cpp
Acf/Impl/CompositorMiniExe/: Main.cpp
Acf/Impl/CompositorPck/: CompositorPck.cpp  CompositorPck.h
Acf/Impl/FileGuiPck/: FileGuiPck.cpp  FileGuiPck.h
Acf/Impl/FilePck/: FilePck.cpp  FilePck.h
Acf/Impl/PackagePck/: PackagePck.cpp  PackagePck.h
Acf/Impl/QMake/: AcfAll.pro  Component.pro  Static.pro  Tool.pro
Acf/Impl/QtGuiPck/: QtGuiPck.cpp  QtGuiPck.h
Acf/Impl/QtMmPck/: QtMmPck.cpp  QtMmPck.h
Acf/Impl/QtPck/: QtPck.cpp  QtPck.h
Acf/Impl/QtViewPck/: QtViewPck.cpp  QtViewPck.h
Acf/Impl/QtWizPck/: QtWizPck.cpp  QtWizPck.h
Acf/Impl/QtWizardPck/: QtWizardPck.cpp  QtWizardPck.h
Acf/Include/: ACF.h
Acf/Partitura/: AcfInfoCopyApp.arx
AcfSln/: RegisterEnvVariables.js  RegisterEnvVariablesLocal.js
AcfSln/Config/: AcfSlnConfig.awc  AcfSlnTestConfig.awc  BaseOnly.awc  BaseOnly.xpc  Core.xpc  Full.xpc
AcfSln/Docs/: InstallationInfo.txt  TechnicalDoc.tag
AcfSln/Impl/CompositorExe/CMake/: CMakeLists.txt
AcfSln/Impl/XpcEditorExe/CMake/: CMakeLists.txt
AcfSln/Include/: AcfSln.h
AcfSln/Include/iservice/CMake/: CMakeLists.txt
AcfTools/: BasePck.arp  FileProcessingPck.arp
AcfTools/Linux/: Acf  Arxc
AcfTools/Windows/: BasePck.arp  BasePck.exp  BasePck.lib  BitmapPck.arp  BitmapPck.exp  BitmapPck.lib  FileGuiPck.arp  FileGuiPck.exp  FileGuiPck.lib  FilePck.arp  FilePck.exp  FilePck.lib  FileProcessingPck.arp  PackagePck.arp  PackagePck.exp  PackagePck.lib  QtGuiPck.arp  QtGuiPck.exp  QtGuiPck.lib  QtPck.arp  QtPck.exp  QtPck.lib  QtViewPck.arp  QtViewPck.exp  QtViewPck.lib
AcfTools/Windows_/: FileProcessingPck.arp
IAcf/: RegisterEnvVariables.js  RegisterEnvVariablesLocal.js
IAcf/Config/: BaseOnly.awc  BaseOnly.xpc  Core.xpc  Full.xpc  IacfConfig.awc
IAcf/Docs/: InstallationInfo.txt  TechnicalDoc.tag
IAcf/Impl/OpenCvPck/CMake/: CMakeLists.txt
IAcf/Impl/QwtPck/CMake/: CMakeLists.txt
IAcf/Impl/WinPck/CMake/: CMakeLists.txt
IAcf/Include/iqaxmm/CMake/: CMakeLists.txt
IAcf/Include/iqwt/CMake/: CMakeLists.txt
IAcf/Include/iqwt3d/CMake/: CMakeLists.txt
VC9/: BuildAllAcf.bat  BuildAllAcf_Release.bat
db/: uuid
(+8869 files in other folders)
